@@ -6,6 +6,9 @@ Local-only = Changes not reflected in Source Code
 Backend = Change is not user facing
 
 ## [2015-12-26] [Since 2015-12-19 Integration]
+### Changed:
+- Finish CR: Add a date stamp of when users last visited Pathways to the admin Users table
+
 ### Fixed:
 - Fix typos in Terms of Use
 
